--- a/index.html
+++ b/index.html
@@ -17,11 +17,15 @@
 	<div class="main_flower_wrapper">
 		<div class="main_flower_box_1">
 		
-			<div class="main_flower_block"><img src="image_1.jpg"></div>
-			<div class="main_flower_block_include">
+			<!--div class="main_flower_block"><img src="image_1.jpg"></div-->
+			<div class="box_1"><img src="image_1.jpg"></div>
+			<div class="box_2"><img src="image_1.jpg"></div>
+			<div class="box_3"><img src="image_1.jpg"></div>
+			
+			<!--div class="main_flower_block_include">
 				<div class=""><img src="image_1.jpg"></div>
 				<div class=""><img src="image_1.jpg"></div>
-			</div>
+			</div-->
 		
 		</div>
 		
